nixidy/generated/prod/zwave-js-ui/Deployment-zwave-js-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: zwave-js-ui
    app.kubernetes.io/instance: zwave-js-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zwave-js-ui
  name: zwave-js-ui
  namespace: home
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: zwave-js-ui
      app.kubernetes.io/instance: zwave-js-ui
      app.kubernetes.io/name: zwave-js-ui
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 4b91d6254ad7b73319a9ebed538cb84995e746de19fb115d9e0a3b9ef5d407f5
      labels:
        app.kubernetes.io/controller: zwave-js-ui
        app.kubernetes.io/instance: zwave-js-ui
        app.kubernetes.io/name: zwave-js-ui
    spec:
      automountServiceAccountToken: false
      containers:
        - image: zwavejs/zwave-js-ui:9.31.0@sha256:361c8c958cf75b731cb73127a403c0750084b8e9b414244d80a1f1bef6bcf460
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8091
            timeoutSeconds: 1
          name: zwave-js-ui
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8091
            timeoutSeconds: 1
          securityContext:
            privileged: true
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8091
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /usr/src/app/store/settings.json
              name: settings
              subPath: settings.json
            - mountPath: /usr/src/app/store
              name: store
            - mountPath: /dev/serial/by-id/usb-Nabu_Casa_ZWA-2_1CDBD4AEBC68-if00
              name: usb
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      nodeSelector:
        kubernetes.io/hostname: sirver
      serviceAccountName: zwave-js-ui
      volumes:
        - configMap:
            name: zwave-js-ui
          name: settings
        - name: store
          persistentVolumeClaim:
            claimName: zwave-js-ui
        - hostPath:
            path: /dev/serial/by-id/usb-Nabu_Casa_ZWA-2_1CDBD4AEBC68-if00
          name: usb
