nixidy/generated/prod/zwave-js-ui/Service-zwave-js-ui.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: zwave-js-ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zwave-js-ui
    app.kubernetes.io/service: zwave-js-ui
  name: zwave-js-ui
  namespace: home
spec:
  ports:
    - name: http
      port: 8091
      protocol: TCP
      targetPort: 8091
    - name: websocket
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/controller: zwave-js-ui
    app.kubernetes.io/instance: zwave-js-ui
    app.kubernetes.io/name: zwave-js-ui
  type: ClusterIP
